--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-    background-color: #D9FDDE;
-    color: #115211;
+    background-color: #e7ede7;
+    color: #517551;
     font-family: 'Lato', sans-serif;
     font-size: 1em;
     font-weight: 300;
