--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,30 +10,46 @@ html {
             box-sizing: inherit;
 }
 
+::selection {
+  color: #fff;
+  background: #c23038;
+}
+
+::-moz-selection {
+  color: #fff;
+  background: #c23038;
+}
+
 body {
     background-color: #e7ede7;
-    color: #517551;
+    color: #333;
     font-family: "Gentium Basic", Georgia, serif;
     font-size: 1em;
     font-weight: 300;
+    line-height: 1.5;
 }
 
 b {
     font-weight: 400;
 }
 
-a, a:active, a:visited, a:hover {
-    font-weight: bold;
-    color: #115211;
-}
-
-a, a:visited {
+a {
+    border-bottom: 1px solid #333;
+    color: inherit;
     text-decoration: none;
 }
 
-a:active, a:hover {
-    background-color: #115211;
-    color: #D9FDDE;
+a:active,
+a:focus,
+a:hover {
+    border-bottom: 2px solid #333;
+    color: inherit;
+    text-decoration: none;
+
+}
+
+a:visited {
+
 }
 
 header {
@@ -41,6 +57,7 @@ header {
     border-bottom: #8AAD89 solid 10px;
     color: #FFF;
     margin-top: 150px;
+    padding: 10px 30px;
     text-align: center;
 }
 
@@ -56,14 +73,63 @@ header img:hover {
             transform: rotate(5deg);
 }
 
-h1 {
+nav {
+    font-size: 1.5em;
+    margin: 20px 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav a {
+    border-bottom: 1px solid #FFF;
+    color: #FFF;
+    margin: 0 25px;
+    text-decoration: none;
+}
+
+nav a:active,
+nav a:focus,
+nav a:hover {
+    border-bottom: 2px solid #FFF;
+    color: inherit;
+    text-decoration: none;
+
+}
+
+nav a:visited {
+
+}
+
+ul {
+    list-style-type: square;
+}
+
+li {
+    margin-bottom: 5px;
+}
+
+h1, h2, h3, nav {
     font-family: 'Open Sans', Helvetica, sans-serif;
+
+}
+h1 {
     font-size: 2.5em;
 }
 
 h2 {
-    font-family: 'Open Sans', Helvetica, sans-serif;
     font-size: 1.8em;
+}
+
+h3 {
+    font-size: 1.5em;
 }
 
 .wrapper {
@@ -77,8 +143,22 @@ h2 {
 
 }
 
+.projects,
+.writings {
+    padding: 10px 30px;
+}
+
+.projects {
+    margin-top: 20px;
+}
+
 .about-me {
+    color: #8AAD89;
     text-align: center;
+}
+
+.skill {
+    color: #c23038;
 }
 
 @media screen and (min-width: 600px) {
