--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,13 @@
 html {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *, *:before, *:after {
-    -webkit-box-sizing: inherit;
-       -moz-box-sizing: inherit;
-            box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 ::selection {
@@ -21,169 +21,156 @@ html {
 }
 
 body {
-    background-color: #e7ede7;
-    color: #333;
-    font-family: "Gentium Basic", Georgia, serif;
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 1.5;
+  background-color: #e7ede7;
+  color: #333;
+  font-family: "Gentium Basic", Georgia, serif;
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1.5;
 }
 
 a {
-    border-bottom: 1px solid #333;
-    color: inherit;
-    text-decoration: none;
+  border-bottom: 1px solid #333;
+  color: inherit;
+  text-decoration: none;
 }
 
-header a,
-header a:active,
-header a:focus,
-header a:hover,
-header a:visited {
-    border-bottom-style: none;
+header a, header a:active, header a:focus, header a:hover, header a:visited {
+  border-bottom-style: none;
 }
 
-a:active,
-a:focus,
-a:hover {
-    border-bottom: 2px solid #333;
-    color: inherit;
-    text-decoration: none;
-
+a:active, a:focus, a:hover {
+  border-bottom: 2px solid #333;
+  color: inherit;
+  text-decoration: none;
 }
 
-a:visited {
-
-}
+a:visited {}
 
 header {
-    background-color: #93B392;
-    border-bottom: #8AAD89 solid 10px;
-    color: #FFF;
-    margin-top: 150px;
-    padding: 10px 30px;
-    text-align: center;
+  background-color: #93B392;
+  border-bottom: #8AAD89 solid 10px;
+  color: #FFF;
+  margin-top: 150px;
+  padding: 10px 30px;
+  text-align: center;
 }
 
 header img {
-    margin-top: -75px;
+  margin-top: -75px;
 }
 
 header img:hover {
-    -webkit-transform: rotate(5deg);
-       -moz-transform: rotate(5deg);
-        -ms-transform: rotate(5deg);
-         -o-transform: rotate(5deg);
-            transform: rotate(5deg);
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  -ms-transform: rotate(5deg);
+  -o-transform: rotate(5deg);
+  transform: rotate(5deg);
 }
 
 nav {
-    font-size: 1.5em;
-    margin: 20px 0;
+  font-size: 1.5em;
+  margin: 20px 0;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
-    display: inline-block;
+  display: inline-block;
 }
 
 nav a {
-    border-bottom: 1px solid #FFF;
-    color: #FFF;
-    margin: 0 25px;
-    text-decoration: none;
+  border-bottom: 1px solid #FFF;
+  color: #FFF;
+  margin: 0 25px;
+  text-decoration: none;
 }
 
-nav a:active,
-nav a:focus,
-nav a:hover {
-    border-bottom: 2px solid #FFF;
-    color: inherit;
-    text-decoration: none;
-
+nav a:active, nav a:focus, nav a:hover {
+  border-bottom: 2px solid #FFF;
+  color: inherit;
+  text-decoration: none;
 }
 
-nav a:visited {
-
-}
+nav a:visited {}
 
 ul {
-    list-style-type: square;
+  list-style-type: square;
 }
 
 li {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 h1, h2, h3, nav {
-    font-family: 'Open Sans', Helvetica, sans-serif;
-
+  font-family: 'Open Sans', Helvetica, sans-serif;
 }
+
 h1 {
-    font-size: 2.5em;
+  font-size: 2.5em;
 }
 
 h2 {
-    font-size: 1.8em;
+  font-size: 1.8em;
 }
 
 h3 {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .wrapper {
-    margin: 0 auto;
-    width: 100%;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .main {
-    background-color: #fff;
-    border-bottom: #8AAD89 solid 10px;
-
+  background-color: #fff;
+  border-bottom: #8AAD89 solid 10px;
 }
 
-.projects,
-.writings {
-    padding: 10px 30px;
+.projects, .writings {
+  padding: 10px 30px;
 }
 
 .projects {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .about-me {
-    text-align: center;
+  text-align: center;
+}
+
+.about-me ul {
+  list-style-type: none;
 }
 
 .skill {
-    color: #c23038;
+  color: #c23038;
 }
 
 .strong {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 footer {
-    background-color: #fff;
-    border-bottom: #8AAD89 solid 10px;
-    font-size: 0.75em;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    padding: 10px 30px;
-    text-align: center;
+  background-color: #fff;
+  border-bottom: #8AAD89 solid 10px;
+  font-size: 0.75em;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  padding: 10px 30px;
+  text-align: center;
 }
 
 @media screen and (min-width: 600px) {
-    body {
-        font-size: 1.125em;
-    }
-
-    .wrapper {
-        max-width: 640px;
-    }
+  body {
+    font-size: 1.125em;
+  }
+  .wrapper {
+    max-width: 640px;
+  }
 }
