Setup breakpoint MQ CSS

--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,17 @@
 /*! HTML5 Boilerplate v7.0.1 | MIT License | https://html5boilerplate.com/ */
-
 /* main.css 1.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
-
-
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-
-   html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 /*
@@ -27,23 +23,21 @@
  *
  * Customize the background color to match your design.
  */
-
 ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 /*
  * A better looking default horizontal rule
  */
-
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
 /*
@@ -51,256 +45,242 @@ hr {
  * images, videos and the bottom of their containers:
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
-
 audio,
 canvas,
 iframe,
 img,
 svg,
 video {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 /*
  * Remove default fieldset styles.
  */
-
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /*
  * Allow only vertical resizing of textareas.
  */
-
 textarea {
-    resize: vertical;
+  resize: vertical;
 }
 
 /* ==========================================================================
    Browser Upgrade Prompt
    ========================================================================== */
-
 .browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
-
-
-
- /* ==========================================================================
+/* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/***** GENERAL STYLES *****/
+:root {
+  --color1: #202020;
+  --color2: #fafad2;
+  --color3: #f00;
+}
 
+html {
+  font-size: 24px;
+}
 
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
 
-   /***** BASE STYLES *****/
-   :root {
-     --color1: #202020;
-     --color2: #fafad2;
-     --color3: #f00;
-   }
+h1, h2, h3 {
+  font-family: adobe-text-pro, Baskerville, serif;
+}
 
-   html {
-     font-size: 24px;
-   }
+a:not(img) {
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  color: var(--color3);
+  line-height: 1em;
+}
 
-   body {
-     font-family: 'Source Sans Pro', sans-serif;
-   }
+.my-name {
+  color: var(--color3);
+}
 
-   h1, h2, h3 {
-     font-family: adobe-text-pro, Baskerville, serif;
-   }
+a:before:not(img) {
+  transition: -ms-transform 0.2s, -webkit-transform 0.2s, transform 0.2s, opacity 0.2s;
+  -webkit-transition: -webkit-transform 0.2s, transform 0.2s, opacity 0.2s;
+  content: "";
+  position: absolute;
+  bottom: -0.1rem;
+  left: 0;
+  height: 0.15em;
+  width: 100%;
+  opacity: 0.15;
+  background: var(--color3);
+  transform: scaleY(0.5);
+  -ms-transform: scaleY(0.5);
+  -webkit-transform: scaleY(0.5);
+  z-index: -1;
+}
 
-   a:not(img) {
-     text-decoration: none;
-     display: inline-block;
-     position: relative;
-     color: var(--color3);
-     line-height: 1em;
-   }
+a:hover,
+a:focus,
+a:active {
+  text-shadow: 1px 1px 0 white;
+}
 
-   .my-name {
-     color: var(--color3);
-   }
+a:hover:before,
+a:focus:before,
+a:active:before {
+  opacity: 1;
+}
 
-   a:before:not(img) {
-     transition: -ms-transform 0.2s, -webkit-transform 0.2s, transform 0.2s, opacity 0.2s;
-     -webkit-transition: -webkit-transform 0.2s, transform 0.2s, opacity 0.2s;
-     content: "";
-     position: absolute;
-     bottom: -0.1rem;
-     left: 0;
-     height: 0.15em;
-     width: 100%;
-     opacity: 0.15;
-     background: var(--color3);
-     transform: scaleY(0.5);
-     -ms-transform: scaleY(0.5);
-     -webkit-transform: scaleY(0.5);
-     z-index: -1;
-   }
+/***** GRID *****/
+.full-width {
+  width: 1200px;
+  margin: 0 auto;
+}
 
-   a:hover,
-   a:focus,
-   a:active {
-     text-shadow: 1px 1px 0 white;
-   }
+.half-width {
+  width: 600px;
+  float: left;
+}
 
-   a:hover:before,
-   a:focus:before,
-   a:active:before {
-     opacity: 1;
-   }
+.third-width {
+  width: 400px;
+  float: left;
+}
 
-   /***** GRID *****/
-   .full-width {
-     width: 1200px;
-     margin: 0 auto;
-   }
+/***** HEADER *****/
+#header {
+  height: 650px;
+}
 
-   .half-width {
-     width: 600px;
-     float: left;
-   }
+#header h1 {
+  font-size: 1.75rem;
+}
 
-   .third-width {
-     width: 400px;
-     float: left;
-   }
+#header h2 {
+  font-size: 2.5rem;
+  clear: both;
+  padding-top: 100px;
+}
 
-   /***** HEADER *****/
-   #header {
-     height: 650px;
-   }
+#header h2 img {
+  padding-right: 20px;
+}
 
-   #header h1 {
-     font-size: 1.75rem;
-   }
+#header h3 {
+  font-size: 1.5rem;
+  margin-right: 30%;
+}
 
-   #header h2 {
-     font-size: 2.5rem;
-     clear: both;
-     padding-top: 100px;
-   }
+#header li:first-child,
+#header li:nth-child(2) {
+  padding-right: 3px;
+}
 
-   #header h2 img {
-     padding-right: 20px;
-   }
+#header li:last-child,
+#header li:nth-child(2) {
+  padding-left: 3px;
+}
 
-   #header h3 {
-     font-size: 1.5rem;
-     margin-right: 30%;
-   }
+/***** NAV *****/
+nav {
+  float: right;
+}
 
-   #header li:first-child,
-   #header li:nth-child(2) {
-     padding-right: 3px;
-   }
+nav ul li {
+  display: inline-block;
+}
 
-   #header li:last-child,
-   #header li:nth-child(2) {
-     padding-left: 3px;
-   }
+/***** ABOUT *****/
+#about {
+  background-color: var(--color2);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23202020' fill-opacity='0.08'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  height: 1050px;
+}
 
-   /***** NAV *****/
-   nav {
-     float: right;
-   }
+#about ul {
+  list-style-type: none;
+}
 
-   nav ul li {
-     display: inline-block;
-   }
+#about li {
+  padding-bottom: 10px;
+}
 
-   /***** ABOUT *****/
-   #about {
-     background-color: var(--color2);
-     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23202020' fill-opacity='0.08'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-     height: 1050px;
-   }
+#about-middle {
+  text-align: center;
+}
 
-   #about ul {
-     list-style-type: none;
-   }
+#about h2 {
+  padding-top: 150px;
+}
 
-   #about li {
-     padding-bottom: 10px;
-   }
+/***** PORTFOLIO *****/
+#portfolio {
+  height: 850px;
+}
 
-   #about-middle {
-     text-align: center;
-   }
+#portfolio h2 {
+  text-align: center;
+  padding-top: 80px;
+}
 
-   #about h2 {
-     padding-top: 150px;
-   }
+.portfolio-item-text {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
-   /***** PORTFOLIO *****/
-   #portfolio {
-     height: 850px;
-   }
+/***** CONTACT *****/
+#contact {
+  background-color: var(--color2);
+  background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23202020' fill-opacity='0.08' fill-rule='evenodd'/%3E%3C/svg%3E");
+  height: 650px;
+}
 
-   #portfolio h2 {
-     text-align: center;
-     padding-top: 80px;
-   }
+#contact h2 {
+  text-align: center;
+  padding-top: 150px;
+}
 
-   .portfolio-item-text {
-     padding-left: 10px;
-     padding-right: 10px;
-   }
+#contact .third-width {
+  text-align: center;
+}
 
-   /***** CONTACT *****/
-   #contact {
-     background-color: var(--color2);
-     background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23202020' fill-opacity='0.08' fill-rule='evenodd'/%3E%3C/svg%3E");
-     height: 650px;
-   }
+#contact img {
+  padding: 10px 15px;
+}
 
-   #contact h2 {
-     text-align: center;
-     padding-top: 150px;
-   }
+.social-icons {
+  color: var(--color3);
+  padding: 10px;
+}
 
-   #contact .third-width {
-     text-align: center;
-   }
+/***** FOOTER *****/
+footer {
+  text-align: center;
+}
 
-   #contact img {
-     padding: 10px 15px;
-   }
+.special {
+  font-family: 'Inconsolata', Courier, monospace;
+}
 
-   .social-icons {
-     color: var(--color3);
-     padding: 10px;
-   }
-
-   /***** FOOTER *****/
-   footer {
-     text-align: center;
-   }
-
-   .special {
-     font-family: 'Inconsolata', Courier, monospace;
-   }
-
-
-
- /* ==========================================================================
+/* ==========================================================================
    Helper classes
    ========================================================================== */
-
 /*
  * Hide visually and from screen readers
  */
-
- .hidden {
+.hidden {
   display: none !important;
 }
 
@@ -312,7 +292,6 @@ textarea {
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */
-
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -322,7 +301,8 @@ textarea {
   padding: 0;
   position: absolute;
   width: 1px;
-  white-space: nowrap; /* 1 */
+  white-space: nowrap;
+  /* 1 */
 }
 
 /*
@@ -330,7 +310,6 @@ textarea {
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */
-
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -345,7 +324,6 @@ textarea {
 /*
 * Hide visually and from screen readers, but maintain layout
 */
-
 .invisible {
   visibility: hidden;
 }
@@ -361,108 +339,112 @@ textarea {
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
-
 .clearfix:before,
 .clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
 }
 
 .clearfix:after {
   clear: both;
 }
 
-
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+/***** TABLET *****/
+@media only screen and (min-width: 768px) {
+  /* Style adjustments for viewports that meet the condition */
+}
 
-   @media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+/***** DESKTOP *****/
+@media only screen and (min-width: 1200px) {
+  /* Style adjustments for viewports that meet the condition */
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */
 }
-
 
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
+@media print {
 
-   @media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster */
-        -webkit-box-shadow: none !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
+  *,
+  *:before,
+  *:after {
+    background: transparent !important;
+    color: #000 !important;
+    /* Black prints faster */
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
 
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
 
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
+  a[href]:after {
+    content: " ("attr(href) ")";
+  }
 
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
+  abbr[title]:after {
+    content: " ("attr(title) ")";
+  }
 
-    /*
+  /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: "";
+  }
 
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
+  pre {
+    white-space: pre-wrap !important;
+  }
 
-    pre {
-        white-space: pre-wrap !important;
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
 
-    /*
+  /*
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
      */
+  thead {
+    display: table-header-group;
+  }
 
-    thead {
-        display: table-header-group;
-    }
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
 
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
 
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
